--- a/Ticketing System/AddForeignUser.html
+++ b/Ticketing System/AddForeignUser.html
@@ -24,7 +24,7 @@
     <!-- swiper CSS -->
     <link rel="stylesheet" href="css/slick.css">
     <!-- style CSS -->
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/userProfile.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">about</a>
@@ -59,6 +59,9 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                     <a class="dropdown-item" href="elements.html">Elements</a>
+                                    <a class="dropdown-item" href="CentralBusStops.html">Bus Stops</a>
+                                    <a class="dropdown-item" href="BusSchedule.html">Bus Schedule</a>
+                                    <a class="dropdown-item" href="BusTicketPrices.html">Ticket Prices</a>
                                 </div>
                             </li>
                             <li class="nav-item">
@@ -81,43 +84,133 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner text-center">
                     <div class="breadcrumb_iner_item">
-                        <h2>Welcome to Tourbi</h2>
+                        <h2>Add Foreign User</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<!-- breadcrumb start-->
 
-<!-- banner part start-->
-<section class="popular_place padding_top">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-4 col-sm-6">
-                <div class="single_popular_place">
-                    <img src="img/icon/local_user.png" alt="">
-                    <h4>Righter Local User</h4>
-                    <a href="LoginPage.html" class="genric-btn primary circle arrow">Righter</a>
+<!-- Your part start-->
+<section class="tour_package padding_top single_pack">
+    <div class="container-fluid">
+        <div class="row align-items-center">
+            <div>
+                <div class="row">
+                    <div class="col-lg-8 col-md-8">
+                        <h3 class="mb-30">Add Foreign User</h3>
+                        <form action="#">
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="mt-10">
+                                            <input type="text" name="first_name" placeholder="First Name"
+                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'First Name'" required
+                                                   class="single-input">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="mt-11">
+                                            <input type="text" name="last_name" placeholder="Last Name" onfocus="this.placeholder = ''"
+                                                   onblur="this.placeholder = 'Last Name'" required class="single-input">
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td colspan="2">
+                                        <div class="mt-12">
+                                            <input type="text" name="token no" placeholder="Token Number" onfocus="this.placeholder = ''"
+                                                   onblur="this.placeholder = 'Token Number'" required class="single-input">
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        <div class="mt-10">
+                                            <input type="text" name="address" placeholder="Address" onfocus="this.placeholder = ''"
+                                                   onblur="this.placeholder = 'Address'" required class="single-input">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="mt-11">
+                                            <div class="form-select" id="city">
+                                                <select>
+                                                    <option value=" 1">City</option>
+                                                    <option value="1">Colombo</option>
+                                                    <option value="1">Kandy</option>
+                                                    <option value="1">Jaffna</option>
+                                                    <option value="1">Anurathapuram</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        <div class="mt-10">
+                                            <input type="email" name="email" placeholder="Email address" onfocus="this.placeholder = ''"
+                                                   onblur="this.placeholder = 'Email address'" required class="single-input">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="mt-11">
+                                            <input type="number" name="phone" placeholder="Phone No" onfocus="this.placeholder = ''"
+                                                   onblur="this.placeholder = 'Phone No'" required class="single-input">
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        <div class="mt-10">
+                                            <input type="text" name="age" placeholder="Age" onfocus="this.placeholder = ''"
+                                                   onblur="this.placeholder = 'Age'" required class="single-input">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="mt-11">
+                                            <div class="form-select" id="package_type">
+                                                <select>
+                                                    <option value=" 1">Package</option>
+                                                    <option value="1">Premium Package</option>
+                                                    <option value="1">Plus Package</option>
+                                                    <option value="1">Standard Package</option>
+                                                    <option value="1">Childern's Package</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td colspan="2">
+                                        <div class="mt-12">
+                                            <input type="text" name="userType" placeholder="User Type" onfocus="this.placeholder = ''"
+                                                   onblur="this.placeholder = 'User Type'" required class="single-input">
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+
+
+                            <div class="mt-10">
+                                <a href="editUser.html" class="genric-btn info circle arrow">Add</a>
+                            </div>
+
+
+                        </form>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="single_popular_place">
-                    <img src="img/icon/foreign_user.png" alt="">
-                    <h4>Righter Foreign User</h4>
-                    <a href="AddForeignUser.html" class="genric-btn primary circle arrow">Righter</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="single_popular_place">
-                    <img src="img/icon/user_details.png" alt="">
-                    <h4>User Details</h4>
-                    <a href="ViewUser.html" class="genric-btn primary circle arrow">View Details</a>
-                </div>
-        </div>
         </div>
     </div>
 </section>
-<!-- banner part start-->
+<!-- Your part end-->
 
 <!--::footer_part start::-->
 <footer class="footer_part">
