--- a/Ticketing System/ViewUser.html
+++ b/Ticketing System/ViewUser.html
@@ -24,7 +24,7 @@
     <!-- swiper CSS -->
     <link rel="stylesheet" href="css/slick.css">
     <!-- style CSS -->
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/viewUser.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">about</a>
@@ -59,6 +59,9 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                     <a class="dropdown-item" href="elements.html">Elements</a>
+                                    <a class="dropdown-item" href="CentralBusStops.html">Bus Stops</a>
+                                    <a class="dropdown-item" href="BusSchedule.html">Bus Schedule</a>
+                                    <a class="dropdown-item" href="BusTicketPrices.html">Ticket Prices</a>
                                 </div>
                             </li>
                             <li class="nav-item">
@@ -81,43 +84,82 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner text-center">
                     <div class="breadcrumb_iner_item">
-                        <h2>Welcome to Tourbi</h2>
+                        <h2>View User</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<!-- breadcrumb start-->
 
-<!-- banner part start-->
-<section class="popular_place padding_top">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-4 col-sm-6">
-                <div class="single_popular_place">
-                    <img src="img/icon/local_user.png" alt="">
-                    <h4>Righter Local User</h4>
-                    <a href="LoginPage.html" class="genric-btn primary circle arrow">Righter</a>
+<!-- Your part start-->
+<section class="tour_package padding_top single_pack">
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            <section class="search_your_country">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-lg-12">
+                        <div class="search_form">
+                            <form action="#">
+                                <div class="form-row">
+                                    <div class="col-lg-9">
+                                        <div class="search_form_iner">
+                                            <input class="custom_select" id="inlineFormCustomSelect1" type="search" placeholder="    Search" aria-label="Search">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <a href="#" class="search_btn">search</a>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="single_popular_place">
-                    <img src="img/icon/foreign_user.png" alt="">
-                    <h4>Righter Foreign User</h4>
-                    <a href="AddForeignUser.html" class="genric-btn primary circle arrow">Righter</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="single_popular_place">
-                    <img src="img/icon/user_details.png" alt="">
-                    <h4>User Details</h4>
-                    <a href="ViewUser.html" class="genric-btn primary circle arrow">View Details</a>
-                </div>
+
+        <div class="viewTable">
+            <table class="table table-bordered">
+                <thead>
+                <tr class="table-primary">
+                    <th scope="col">#</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">Token Number</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">City</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Phone No</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Package</th>
+                    <th scope="col">User Type</th>
+                    <th scope="col">Delete</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <th scope="col">AAAAAAAAA</th>
+                    <th scope="col">BBBBBBBBB</th>
+                    <th scope="col">111</th>
+                    <th scope="col">CCCCCCCCC</th>
+                    <th scope="col">DDDDDDDDD</th>
+                    <th scope="col">EEEEEEEEE</th>
+                    <th scope="col">01234567890</th>
+                    <th scope="col">22</th>
+                    <th scope="col">FFFFFFFFF</th>
+                    <th scope="col">GGGGGGGGG</th>
+                    <th scope="col"><a href="editUser.html" class="genric-btn danger circle arrow">Delete</a></th>
+
+                </tr>
+
+                </tbody>
+            </table>
         </div>
-        </div>
-    </div>
+            </section>
+
 </section>
-<!-- banner part start-->
+<!-- Your part end-->
 
 <!--::footer_part start::-->
 <footer class="footer_part">
